--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ console = "0.15.8"
 dashmap = { version = "6.1.0", features = [] }
 edit = "0.1.5"
 eyre = "0.6.12"
-gix = { version = "0.72.1", default-features = false, features = ["worktree-mutation"] }
 hex = "0.4.3"
 hex-literal = "0.4.1"
 libc = "0.2.158"
@@ -34,6 +33,7 @@ simple_logger = "5.0.0"
 strum_macros = "0.27.1"
 subtle = "2.6.1"
 sys-mount = "3.0.1"
+chrono = { version = "0.4", features = ["serde"] }
 
 [profile.release]
 opt-level = "z"
